--- a/front-end/src/styles/blocks/lesson.scss
+++ b/front-end/src/styles/blocks/lesson.scss
@@ -52,6 +52,10 @@
   @include desktop-small {
     padding: 0 5rem;
   }
+
+  @include tablet {
+    margin: 3rem auto;
+  }
   
   @include mobile {
     padding: 0 1.6rem;
@@ -184,25 +188,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem 5rem;
+  padding: 3rem 6rem;
   background-color: white;
   border-radius: $big-border-radius;
   box-shadow: $bxs-result-shadow;
-  max-width: max-content;
   position: absolute;
-  bottom: -3rem;
+  width: 37rem;
+  top: 25rem;
   left: 50%;
   transform: translate(-50%, 0);
 
+  @include tablet {
+    top: 22rem;
+    padding: 3.5rem 5rem;
+    width: 35rem;
+  }
+
   @include mobile {
-    padding: 3rem 2rem;
+    width: 28rem;
+    padding: 2rem 2rem;
   }
 }
 
 .lesson-result-title {
-  @include font-title-mobile;
+  @include font-subtitle-mobile;
   margin-bottom: 2rem;
   text-align: center;
+  color: $c-accent;
+  line-height: 2.2rem;
 }
 
 .lesson-result-req {
@@ -214,6 +227,12 @@
 
 .lesson-score {
   display: flex;
+  color: $c-main-text;
+  column-gap: 0.4rem;
+}
+
+.lesson-result-score-text {
+  color: $c-accent;
 }
 
 .lesson-result-accuracy-wrapper,
@@ -230,10 +249,60 @@
 .lesson-result-accuracy-wrapper,
 .lesson-result-speed-wrapper,
 .lesson-result-speed-star-wrapper {
-  color: $c-menu-inactive-link;
+  color: $c-main-text;
 }
 
 .lesson-result-accuracy-wrapper,
 .lesson-result-speed-wrapper {
   margin-top: 0.4rem;
+}
+
+.lesson-badges-wrapper {
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+  row-gap: 1rem;
+  position: relative;
+  padding: 0 2rem;
+  top: -18rem;
+  flex-wrap: wrap;
+  margin: 0 auto;
+
+  @include mobile {
+    top: -20rem;
+  }
+}
+
+.lesson-badge {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1rem;
+  max-width: min-content;
+  padding: 1rem;
+  background-color: white;
+  border-radius: $small-border-radius;
+  box-shadow: $bxs-modal-shadow;
+}
+
+.lesson-badge-img {
+  width: 8rem;
+  height: 8rem;
+}
+
+.lesson-badge-text {
+  @include font-main-small;
+  display: flex;
+  flex-direction: column;
+  max-width: 17rem;
+  min-width: 15rem;
+  row-gap: 1rem;
+}
+
+.lesson-badge-title {
+  color: $c-accent;
+}
+
+.lesson-badge-content {
+  color: $c-main-text;
 }
