--- a/front-end/src/styles/blocks/lesson.scss
+++ b/front-end/src/styles/blocks/lesson.scss
@@ -189,7 +189,7 @@
   flex-direction: column;
   align-items: center;
   padding: 3rem 6rem;
-  background-color: white;
+  background-color: $c-body-bg;
   border-radius: $big-border-radius;
   box-shadow: $bxs-result-shadow;
   position: absolute;
@@ -280,9 +280,9 @@
   column-gap: 1rem;
   max-width: min-content;
   padding: 1rem;
-  background-color: white;
+  background-color: $c-body-bg;
   border-radius: $small-border-radius;
-  box-shadow: $bxs-modal-shadow;
+  box-shadow: $bxs-result-shadow;
 }
 
 .lesson-badge-img {
@@ -305,4 +305,25 @@
 
 .lesson-badge-content {
   color: $c-main-text;
+}
+
+
+.lesson-ribbon {
+  @include font-subtitle-mobile;
+  position: absolute;
+  padding: 0 3rem;
+  line-height: 5rem;
+  background-color: $c-accent;
+  color: white;
+  top: 5rem;
+  border-radius: 0 0 $small-border-radius $small-border-radius;
+  transition: $transition-time;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: -1;
+
+  @include tablet {
+    @include font-main;
+    line-height: 4rem;
+  }
 }
