--- a/front-end/src/styles/common/variables.scss
+++ b/front-end/src/styles/common/variables.scss
@@ -12,7 +12,9 @@ $desktop-small-width: 1079px;
 $tablet-width: 899px;
 $tablet-small-width: 799px;
 $mobile-width: 599px;
+$mobile-badges-width: 479px;
 $mobile-small-width: 422px;
+$mobile-small-badges-width: 379px;
 
 $desktop-margin: 8rem;
 $tablet-margin: 5rem;
