feat: add lesson custom settings for background and font-size

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -22,3 +22,4 @@
 @import './styles/blocks/confirmation.scss';
 @import './styles/blocks/burger-menu.scss';
 @import './styles/blocks/about.scss';
+@import './styles/blocks/customization.scss';
