--- a/front-end/src/styles/blocks/lesson.scss
+++ b/front-end/src/styles/blocks/lesson.scss
@@ -1,5 +1,6 @@
 .lesson {
   position: relative;
+  height: 100vh;
 
  &::before {
     content: '';
@@ -9,6 +10,7 @@
     height: 5rem;
     width: 100%;
     background-color: $c-block-bg;
+    z-index: 2;
   }
 }
 
@@ -34,10 +36,32 @@
   column-gap: 4rem;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 5;
 
   @include mobile {
     column-gap: 1rem;
+  }
+}
+
+.lesson-ribbon {
+  @include font-subtitle-mobile;
+  position: absolute;
+  padding: 0 3rem;
+  line-height: 5rem;
+  background-color: $c-accent;
+  color: white;
+  top: 5rem;
+  text-align: center;
+  border-radius: 0 0 $small-border-radius $small-border-radius;
+  transition: $transition-time;
+  left: 50%;
+  transform: translate(-50%, 0);
+  white-space: nowrap;
+  z-index: 1;
+  
+  @include tablet {
+    @include font-main;
+    line-height: 4rem;
   }
 }
 
@@ -181,8 +205,13 @@
   word-spacing: 0.4rem;
   height: 24rem;
   overflow: hidden;
+  line-height: 4rem;
 }
 
+.lesson-char {
+  padding: 0.2rem 0 0.2rem 0.3rem;
+  margin: 0 0.1rem;
+}
 
 .lesson-result {
   display: flex;
@@ -305,25 +334,4 @@
 
 .lesson-badge-content {
   color: $c-main-text;
-}
-
-
-.lesson-ribbon {
-  @include font-subtitle-mobile;
-  position: absolute;
-  padding: 0 3rem;
-  line-height: 5rem;
-  background-color: $c-accent;
-  color: white;
-  top: 5rem;
-  border-radius: 0 0 $small-border-radius $small-border-radius;
-  transition: $transition-time;
-  left: 50%;
-  transform: translate(-50%, 0);
-  z-index: -1;
-
-  @include tablet {
-    @include font-main;
-    line-height: 4rem;
-  }
 }
