--- a/front-end/src/styles/blocks/lesson.scss
+++ b/front-end/src/styles/blocks/lesson.scss
@@ -106,13 +106,13 @@
   }
 }
 
-.lesson-keyboard-btn {
+.lesson-skin-btn {
   height: 4rem;
   width: 4rem;
-  background: $bg-lesson-kb no-repeat center;
+  background: $bg-lesson-skin no-repeat center;
 
   &:hover {
-    background: $bg-lesson-kb-hover no-repeat center;
+    background: $bg-lesson-skin-hover no-repeat center;
   }
 }
 
