--- a/front-end/src/styles/blocks/lessons.scss
+++ b/front-end/src/styles/blocks/lessons.scss
@@ -4,22 +4,26 @@
   row-gap: 6rem;
   max-width: 110rem;
   padding: 0 8rem;
-  margin: 6rem auto;
+  margin: 0 auto 6rem;
 
   @include desktop-small {
-    padding: 0 4rem;
+    padding: 0 5rem;
   }
 
   @include tablet {
     row-gap: 4rem;
-    margin: 5rem 0;
+    margin: 0 0 5rem;
     padding: 0 3rem;
   }
 
   @include mobile {
     row-gap: 2rem;
-    margin: 3rem 0;
+    margin: 0 0 3rem;
     padding: 0 1.6rem;
+  }
+
+  .back-btn {
+    height: 5rem;
   }
 }
 
