--- a/front-end/src/styles/common/fonts.scss
+++ b/front-end/src/styles/common/fonts.scss
@@ -21,3 +21,11 @@
     url("./assets/fonts/Nunito-ExtraBold.ttf") format("ttf");
   font-weight: 800;
 }
+
+@font-face {
+  font-family: "NotoSerif";
+  src: url("./assets/fonts/NotoSerif-Regular.woff2") format("woff2"),
+    url("./assets/fonts/NotoSerif-Regular.woff") format("woff"),     
+    url("./assets/fonts/NotoSerif-Regular.ttf") format("ttf");
+  font-weight: 400;
+}
