--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -29,6 +29,12 @@
   }
 }
 
+@mixin tablet-stats {
+  @media (max-width: $tablet-stats-width) {
+    @content;
+  }
+}
+
 @mixin mobile {
   @media (max-width: $mobile-width) {
     @content;
