--- a/front-end/src/games/typing-hero/typing-hero.scss
+++ b/front-end/src/games/typing-hero/typing-hero.scss
@@ -1,3 +1,4 @@
 @import './styles/game-menu.scss';
+@import './styles/modals.scss';
 @import './styles/lvl-field.scss';
 @import './styles/achievement.scss';
