--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -23,3 +23,6 @@
 @import './styles/blocks/burger-menu.scss';
 @import './styles/blocks/about.scss';
 @import './styles/blocks/customization.scss';
+
+// Games
+@import './games/typing-hero/typing-hero.scss'
