refactor: change font size for inputs to bigger one

--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -148,7 +148,7 @@
 }
 
 @mixin default-input {
-  @include font-main-small;
+  @include font-main;
   display: block;
   height: 4rem;
   color: $c-main-text;
