--- a/front-end/src/games/typing-hero/styles/game-menu.scss
+++ b/front-end/src/games/typing-hero/styles/game-menu.scss
@@ -143,7 +143,7 @@
   position: relative;
   width: 18rem;
   height: 18rem;
-  border: 0.2rem solid #F4F4F4;
+  border: 0.2rem solid $c-hero-borders;
   border-radius: $big-border-radius;
   transition: $transition-time;
   &:hover {
