--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -29,6 +29,13 @@ body.light {
   --c-skin-two-bg-all: #C2CAF5;
   --c-skin-two-bg-func: #D3AFE0;
   --c-skin-two-bg-cur: #69C9FF;
+  //
+  --c-hero-borders: #F4F4F4;
+  --c-hero-lvl-bg: #F5F5F5;
+  --c-letters-field: #FFFFFF;
+  --c-hero-modal-bg: #FFFFFF;
+  --c-hero-modal-title-btn: #212529;
+  //
 
   --bxs-modal-shadow: 0px 0px 1rem rgba(33, 37, 41, 0.15);
   --bxs-result-shadow: 0px 0px 5rem rgba(33, 37, 41, 0.15);
@@ -113,6 +120,13 @@ body.dark {
   --c-skin-two-bg-all: #58698B;
   --c-skin-two-bg-func: #8E7A98;
   --c-skin-two-bg-cur: #4F98C1;
+    //
+    --c-hero-borders: #303D58;
+    --c-hero-lvl-bg: #1E273A;
+    --c-letters-field: #212C42;
+    --c-hero-modal-bg: #1E273A;
+    --c-hero-modal-title-btn: #D984BC;
+    //
 
   --bxs-modal-shadow: 0px 0px 1rem rgba(33, 37, 41, 0.15);
   --bxs-result-shadow: 0px 0px 2rem rgba(30, 69, 107, 0.5);
@@ -198,6 +212,13 @@ $c-skin-two-border: var(--c-skin-two-border);
 $c-skin-two-bg-all: var(--c-skin-two-bg-all);
 $c-skin-two-bg-func: var(--c-skin-two-bg-func);
 $c-skin-two-bg-cur: var(--c-skin-two-bg-cur);
+//
+$c-hero-borders: var(--c-hero-borders);
+$c-hero-lvl-bg: var(--c-hero-lvl-bg);
+$c-letters-field: var(--c-letters-field);
+$c-hero-modal-bg: var(--c-hero-modal-bg);
+$c-hero-modal-title-btn: var(--c-hero-modal-title-btn);
+//
 
 $bxs-modal-shadow: var(--bxs-modal-shadow);
 $bxs-result-shadow: var(--bxs-result-shadow);
